Fix text wrap

--- a/_includes/styles/typography.scss
+++ b/_includes/styles/typography.scss
@@ -23,10 +23,6 @@ h3 + h4 {
   margin-top: 0.6em;
 }
 
-p, li, ul, ol {
-  text-wrap: balance;
-}
-
-h1, h2, h3, h4, h5, h6 {
+p, li, ul, ol, h1, h2, h3, h4, h5, h6 {
   text-wrap: pretty;
 }
